@@ -62,6 +62,7 @@ OPT_DISABLE_R3KA        = @OPT_DISABLE_R3KA@
 OPT_DISABLE_SM83        = @OPT_DISABLE_SM83@
 OPT_DISABLE_TLCS90      = @OPT_DISABLE_TLCS90@
 OPT_DISABLE_Z80N        = @OPT_DISABLE_Z80N@
+OPT_DISABLE_R800        = @OPT_DISABLE_R800@
 OPT_DISABLE_STM8        = @OPT_DISABLE_STM8@
 OPT_DISABLE_PDK13       = @OPT_DISABLE_PDK13@
 OPT_DISABLE_PDK14       = @OPT_DISABLE_PDK14@
